moved tests